--- a/wellfin/android/app/src/main/res/xml/data_extraction_rules.xml
+++ b/wellfin/android/app/src/main/res/xml/data_extraction_rules.xml
@@ -2,14 +2,13 @@
 <data-extraction-rules>
     <cloud-backup>
         <!-- Exclude sensitive data from cloud backup -->
-        <exclude domain="sharedpref" path="auth_tokens.xml"/>
-        <exclude domain="sharedpref" path="user_credentials.xml"/>
-        <exclude domain="database" path="sensitive_data.db"/>
+        <exclude domain="sharedpref" path="FlutterSecureStorage"/>
+        <exclude domain="sharedpref" path="firebase_auth"/>
+        <exclude domain="database"/>
     </cloud-backup>
     
     <device-transfer>
         <!-- Allow device transfer for user preferences -->
-        <include domain="sharedpref" path="app_settings.xml"/>
-        <include domain="database" path="user_data.db"/>
+        <include domain="sharedpref" path="flutter"/>
     </device-transfer>
 </data-extraction-rules> 
